# PyMOCAT-MC

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  coverage.xml  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  setup.py  setup_environment.py  test-paper-local.md
.github/workflows/: draft-pdf.yml  tests.yml
MATLAB_implementation/: compare_results.m  initSim.m  realistic_scenario_2020s.m  test_all_scenarios.m
MATLAB_implementation/Examples/: setup_MCconfig.m
MATLAB_implementation/Examples/Quick_Start/: Quick_Start_with_plots.m  matlab_all_benchmarks.json  matlab_basic_benchmark.json  matlab_benchmark_results.mat  matlab_comparison_results.mat  matlab_full_default_result.json  run_all_benchmarks.m  run_benchmark_tests.m  simple_benchmark.m  test_full_default.m
MATLAB_implementation/Examples/Realistic_Scenario/: matlab_realistic_2020s_results.mat  realistic_scenario_2020s.m
MATLAB_implementation/Examples/Scenario_No_Launch/: initSim.m
MATLAB_implementation/supporting_functions/: angl.m  angl_vec.m  fillin_atmosphere.m  kepler1_C.mexmaca64  newtonnu_vec.m
MATLAB_implementation/tests/: run_comparison_tests.m  run_tests.m  test_comparison_direct.m  test_fix.m  test_minimal.m  test_quick_scenarios.m  test_using_quickstart.m
analysis_figures/: create_simplified_cross_scenario.py  measure_accuracy_errors.py  modify_summary_plot.py  plot_computational_efficiency.py  plot_error_analysis.py  plot_execution_time.py  plot_object_type_heatmap.py  plot_total_object_counts.py
comparison_tests/: accuracy_error_data.csv  accuracy_error_data.json  test_all_scenarios.py  test_quick_scenarios.py
paper/: paper.bib  paper.md
python_implementation/: mocat_mc.py  python_comparison_results.json  test_import.py  test_scenarios_summary.md  test_simple_run.py
python_implementation/examples/: __init__.py  test_scenario_simple.py
python_implementation/examples/Quick_Start/: README.md  __init__.py  quick_start.py  quick_start_with_plots.py
python_implementation/examples/Realistic_Scenario/: README.md  __init__.py  realistic_scenario_2020s.py
python_implementation/examples/Scenario_No_Launch/: README.md  __init__.py  scenario_no_launch.py
python_implementation/supporting_data/: __init__.py  discos_plus_tle_historic.py  setup_tle_lnt_historic.py
python_implementation/supporting_functions/: __init__.py  analytic_propagation.py  analytic_propagation_vec.py  angl_vec.py  categorizeObj.py  categorize_obj.py  cfgMC_constants.py  cfg_mc_constants.py  collision_prob_vec.py  cross_vec.py  cube_vec_v3.py  densityexp.py  densityexp_vec.py  fillMassRadiusResample.py  fill_mass_radius_resample.py  fillin_atmosphere.py  fillin_physical_parameters.py  filter_objclass_fragments_int.py  frag_col_sbm_vec.py  frag_exp_sbm_vec.py  func_Am.py  func_create_tlesv2_vec.py  func_dv.py  get_idx.py  get_zero_groups.py  getgravc.py  init_sim.py  jd2date.py  kepler1.py  kepler1_vec.py  lininterp1.py  lininterp1_vec.py  lininterp2.py  lininterp2_vec.py  lininterp2_vec_v2.py  main_mc.py  mean2osc.py  mean2osc_m.py  mean2osc_m_vec.py  mean2osc_vec.py  (+9 more)
python_implementation/tests/: minimal_test.py  test_basic_functionality_simple.py  test_fix.py  test_import.py  test_simple_run.py
tests/: README.md  minimal_test.py  run_tests.py  run_tests.sh  test_basic_functionality_simple.py  test_import.py  test_simple_run.py
