[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymocat-mc"
version = "1.0.0"
description = "Python implementation of the MIT Orbital Capacity Assessment Toolbox - Monte Carlo"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rushil Kukreja", email = "rushil.kukreja@tjhsst.edu"},
    {name = "Edward J. Oughton"},
    {name = "Giovanni Lavezzi"},
    {name = "Enrico M. Zucchelli"},
    {name = "Daniel Jang"},
    {name = "Richard Linares"},
]
maintainers = [
    {name = "Rushil Kukreja", email = "rushil.kukreja@tjhsst.edu"},
]
keywords = [
    "orbital mechanics",
    "space debris",
    "Monte Carlo simulation",
    "space situational awareness",
    "satellite tracking",
    "space sustainability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
test = [
    "flake8>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
    "nbsphinx>=0.8.8",
]

[project.urls]
Homepage = "https://github.com/rushilkukreja/PyMOCAT-MC-2"
Documentation = "https://github.com/rushilkukreja/PyMOCAT-MC-2#readme"
Repository = "https://github.com/rushilkukreja/PyMOCAT-MC-2"
"Bug Tracker" = "https://github.com/rushilkukreja/PyMOCAT-MC-2/issues"

[project.scripts]
pymocat-mc = "mocat_mc:main"

[tool.setuptools]
package-dir = {"" = "python_implementation"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python_implementation"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.mat", "*.csv", "*.xlsx", "*.txt", "*.json", "*.png"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["python_implementation/tests", "comparison_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=python_implementation",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["python_implementation"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | MATLAB_implementation
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "MATLAB_implementation/",
    "build/",
    "dist/",
]